--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,31 @@ dev = []
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.pytest.ini_options]
-python_files = "test*.py"
-python_functions = "test_*"
+[tool.poetry.dependencies]
+autopep8 = "*"
+ipykernel = "*"
+ipython = "*"
+matplotlib = "*"
+memory-profiler = "*"
+nbformat = "*"
+networkx = "*"
+numpy = "*"
+pep8 = "*"
+pipenv = "*"
+plotly = "*"
+psutil = "*"
+pycodestyle = "*"
+pydot = "*"
+pytest = "*"
+scipy = "*"
+tabulate = "*"
+termcolor = "*"
+treelib = "*"
+sortedcontainers = "*"
+sympy = "*"
+colorama = "*"
+ipympl = "*"
+more-itertools = "*"
+prettyprinttree = "*"
+sortedcollections = "*"
+requests = "*"
